--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,19 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+html{
+  box-sizing:border-box;
+}
+
+*,
+::after,
+::before{
+  box-sizing: inherit;
+}
+body{
+  background: #eee;
+  font-family: 'Montserrat', sans-serif;
+}
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
