--- a/src/Buttons/style.css
+++ b/src/Buttons/style.css
@@ -1,3 +1,16 @@
+.buttons {
+    display: grid;
+    grid-template-columns: auto auto;
+    grid-gap: 20px;
+}
+@media (max-width: 767px) {
+    .buttons{
+        grid-template-columns: auto;
+        justify-content: center;
+        grid-gap: 15px;
+    }
+}
+
 .buttons__button {
     border: none;
     background-color: transparent;
