--- a/src/Section/style.css
+++ b/src/Section/style.css
@@ -2,6 +2,8 @@
     background: white;
     margin-bottom: 10px 0;
     box-shadow: 0 0 5px #ddd;
+    padding: 15px;
+    margin-bottom: 10px;
 }
 
 .section__header {
@@ -9,20 +11,6 @@
     padding: 20px;
     margin: 0;
     border-bottom: 1px solid #ddd;
-}
-
-.section__body {
-    padding: 15px;
-    margin-bottom: 10px;
-
-}
-.section__h2 {
-    padding: 0;
-    font-size: 20px;
-    margin: 0;
-}
-
-.section__header--grid {
     display: grid;
     grid-gap: 20px;
     grid-template-columns: auto auto;
@@ -31,7 +19,16 @@
 }
 
 @media (max-width: 767px) {
-    .section__header--grid {
+    .section__header {
         grid-template-columns: 1fr;
     }
 }
+
+.section__header--title {
+    padding: 0;
+    font-size: 20px;
+    margin: 0;
+}
+
+
+
